Tools/WebKitTestRunner/TestController.h
@@ -92,6 +92,7 @@ private:
     bool runTest(const char* pathOrURL);
 
     void platformInitialize();
+    void platformDestroy();
     void platformInitializeContext();
     void platformRunUntil(bool& done, double timeout);
     void platformDidCommitLoadForFrame(WKPageRef, WKFrameRef);
@@ -180,6 +181,11 @@ private:
 
 #if PLATFORM(MAC) || PLATFORM(QT) || PLATFORM(GTK) || PLATFORM(EFL)
     OwnPtr<EventSenderProxy> m_eventSenderProxy;
+#endif
+
+#if PLATFORM(QT)
+    class RunLoop;
+    RunLoop* m_runLoop;
 #endif
 
     WorkQueueManager m_workQueueManager;
